remove phone and add trade settle functionlity
